Adjusting modules and packages